<resources>
    <string name="app_name">Proyecto Aplicativo Taqueria</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="api_key">AIzaSyDAFvXoqfqMGNtqAtzxamyD3BHgGIEr9-g</string>
    <string name="label_from">Direccion origen</string>
    <string name="label_to">Direccion destino</string>
    <string name="btn_change">Modificar</string>
    <string name="label_distance">Distancia</string>
    <string name="label_time">Tiempo</string>
    <string name="label_price">Precio</string>
    <string name="marker_title_from">Desde</string>
    <string name="marker_title_to">Hasta</string>


</resources>