<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".ui.Gps.mapap"
    android:background="#1E3712">

    <TextView
        android:layout_marginTop="12dp"
        android:id="@+id/tvFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_from"
        android:textColor="#FFFFFF"/>



    <Button
        android:id="@+id/btnFrom"
        android:text="Modificar origen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="12dp"
        android:id="@+id/tvTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_to"
        android:textColor="#FFFFFF"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp">

        <Button
            android:id="@+id/btnTo"
            android:text="modificar destino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp" /> <!-- Ajusta el margen según sea necesario -->

        <Button
            android:id="@+id/btnTacos"
            android:text="Destino Taqueria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp" /> <!-- Ajusta el margen según sea necesario -->

    </LinearLayout>



    <!-- Mapa -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <fragment
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/map"
            tools:context=".MapsActivity"
            android:name="com.google.android.gms.maps.SupportMapFragment" />

    </FrameLayout>

    <!-- Travel info -->

    <LinearLayout
        android:id="@+id/llTravelInfo"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">



        <TextView
            android:id="@+id/tvDistance"
            android:text="@string/label_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/tvTime"
            android:text="@string/label_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="30sp"/>

        <LinearLayout
            android:id="@+id/cs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_price"
                android:textColor="#FFFFFF"
                android:textSize="30sp"/>

            <ImageView
                android:id="@+id/ivCornerImage"
                android:layout_width="34dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:src="@drawable/tubnail" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>

